FIX: changed darkmode subtext contrast

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,7 +27,7 @@
         --icon-bg-dark: invert(100%);
         --modal-bg-dark: #161616;
         --modal-links-dark: #2c2c2c;
-        --issues-text-color-dark: #8f8e8e;
+        --issues-text-color-dark: #ffffff;
         --footer-text-color-dark: #fafafa66;
     }
 }
